--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-"homepage": "https://Swarnamoyb.github.io/Softsell",
 {
   "name": "softsell_website",
   "private": true,
@@ -11,7 +10,6 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
-
     
   },
   "dependencies": {
@@ -32,8 +30,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-gh-pages": "^1.0.1"
   },
   "homepage": "https://Swarnamoyb.github.io/Softsell"
-
 }
